added cdrom icon.
Thu Dec 13 00:53:38 2001  Tim Janik  <timj@gtk.org>

        * beast-gtk/icons/: added cdrom icon.

        * beast-gtk/bstplayback.[hc]: first code cleanup.

        * beast-gtk/bstsnetshell.c (zoomed_add_xpm): center xpm.

        * beast-gtk/*.h: remove unneeded #pragma lines.

svn path=/trunk/; revision=307

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -56,6 +56,7 @@ beast_headers = $(strip \
 	bstpatterndialog.h \
 	bstpatterneditor.h \
 	bstpatternview.h \
+	bstplayback.h \
 	bstplaylist.h \
 	bstpreferences.h \
 	bstprocedure.h \
@@ -97,6 +98,7 @@ beast_sources = $(strip \
 	bstpatterndialog.c \
 	bstpatterneditor.c \
 	bstpatternview.c \
+	bstplayback.c \
 	bstplaylist.c \
 	bstpreferences.c \
 	bstprocedure.c \
