reenable latency device monitor.
Fri Dec 14 08:55:29 2001  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c: reenable latency device monitor.

        * beast-gtk/bstservermonitor.[hc]: new files, showing BseServer options.

svn path=/trunk/; revision=310

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -64,6 +64,7 @@ beast_headers = $(strip \
 	bstradiotools.h \
 	bstsamplerepo.h \
 	bstsampleshell.h \
+	bstservermonitor.h \
 	bstsnetshell.h \
 	bstsnetrouter.h \
 	bstsongshell.h \
@@ -106,6 +107,7 @@ beast_sources = $(strip \
 	bstradiotools.c \
 	bstsamplerepo.c \
 	bstsampleshell.c \
+	bstservermonitor.c \
 	bstsnetshell.c \
 	bstsnetrouter.c \
 	bstsongshell.c \
