as a usability improvement, restrict range to 180 to 0 degrees.
Fri Dec 14 18:43:49 2001  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstdial.[hc] (bst_dial_update): as a usability improvement,
        restrict range to 180 to 0 degrees. GTK-2.0-updated the code.

        * beast-gtk/bstxframe.[hc]: new widget, required by an as of yet
        unimplemented killer feature ;)

svn path=/trunk/; revision=311

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -74,6 +74,7 @@ beast_headers = $(strip \
 	bstwavereposhell.h \
 	bstwaveview.h \
 	bstwaveeditor.h \
+	bstxframe.h \
 	bstxkb.h \
 	bstzoomedwindow.h \
 	glewidgets.h \
@@ -117,6 +118,7 @@ beast_sources = $(strip \
 	bstwavereposhell.c \
 	bstwaveview.c \
 	bstwaveeditor.c \
+	bstxframe.c \
 	bstxkb.c \
 	bstzoomedwindow.c \
 	$(PROFILE_SOURCE) \
