GtkTablke derived widget, that allowes for limited grid-aligned GUI
Fri Jan 11 05:54:30 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstracktable.[hc]: GtkTablke derived widget, that
	allowes for limited grid-aligned GUI editing.

	* beast-gtk/bstrtest.c: test program for bstracktable.

	* beast-gtk/bstapp.[hc]: fix main loop exit.

	* beast-gtk/bstdial.[hc]: more cosmetic fixups.

	* beast-gtk/bstpatterneditor.[hc]: fix font and clear
	windows upon redraws.

	* beast-gtk/bstplaylist.[hc]: move to xpm format for the
	drop spot icon. remove kennel usage.

	* beast-gtk/bstsnetrouter.[hc]: silently ignor non BseSource items.
	fixed xpm icon creation.
	(bst_snet_router_build_page): convenience function to build notebook
	page with SNetRouter (so can be resused in songs).

	* beast-gtk/bstsnetshell.c: adaptions to SNetRouter changes.

	* beast-gtk/bstsongshell.[hc]: create a SNetRouter here as well.

	* beast-gtk/bstutils.[hc]: get rid of GtkKennel implementation,
	we have GtkSizeGroup now.
	(bst_xpm_view_create): create a GtkPixmap widget from an xpm.
	(bst_widget_force_bg_clear): force bg clearance and redraw
	on a widget.

Fri Jan 11 06:17:23 2002  Tim Janik  <timj@gtk.org>

	* bsecontainer.h: provide object flags user shift macro.

	* *.c: reset TypeInfo prealloc configurations.

	* bseinstrument.c: tiny cleanup.

	* bsemain.[hc]: provide sequencer mutex.

	* bsepattern.c: insert sequencer locks as apropriate.

	* bsepatterngroup.c: same here.

	* bsepcmoutput.c: doh, fix off-by-one buffer access.

	* bsesnet.[hc]: change code to allow derivation.

	* bsesong.[hc]: derive from BseSNet. protect portions
	by sequencer lock. spwan sequencer thread upon playback.

	* bsesource.c: fix parser warning about failing connections.

	* bsestorage.c: fix off-by-one string access.

	* bsesuper.h: provide object flag user shift macro.

	* gsl-mplan.txt: updates, mention flow jobs.

	* gslcommon.[hc]: fix gsl_delete_struct/gsl_delete_structs.
	(gsl_ring_find): nw function to find 

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -22,7 +22,7 @@ DEFS += $(strip \
 # special profiling hooks
 PROFILE_SOURCE = # profile.c
 CFLAGS += # $(subst profile.c, -pg -a, $(findstring profile.c, $(<F)))
-LIBS += # -pg 
+LIBS += # -lefence # -pg 
 
 # link programs against BSE and other neccessary libraries
 progs_LDADD = \
@@ -61,6 +61,7 @@ beast_headers = $(strip \
 	bstpreferences.h \
 	bstprocedure.h \
 	bstqsampler.h \
+	bstracktable.h \
 	bstradiotools.h \
 	bstsamplerepo.h \
 	bstsampleshell.h \
@@ -106,6 +107,7 @@ beast_sources = $(strip \
 	bstprocedure.c \
 	bstqsampler.c \
 	bstradiotools.c \
+	bstracktable.c \
 	bstsamplerepo.c \
 	bstsampleshell.c \
 	bstservermonitor.c \
@@ -203,9 +205,11 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 # setup BEAST sources and their dependancies
 #
 beast_SOURCES = $(beast_sources)
-noinst_PROGRAMS = bststest
+noinst_PROGRAMS = bststest bstrtest
 bststest_SOURCES = bststest.c bstutils.c gnomeforest.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
+bstrtest_SOURCES = bstrtest.c bstracktable.c bstdial.c
+bstrtest_LDADD = $(progs_LDADD)
 
 EXTRA_DIST += $(beast_headers) $(beast_extra_sources)
 MAINTAINERCLEANFILES += $(beast_built_sources)
