make consumer property a per module property, changable via
Tue Jan 29 15:16:51 2002  Tim Janik  <timj@gtk.org>

        * gslengine.[hc], gslopmaster.c: make consumer property a per module
        property, changable via gsl_job_set_consumer().

        * *.c: changed modules accordingly to set consumership where
        necessary.

        * bsesubsynth.[hc]: make number of input/output channels compile time
        configurable.

        * bsesong.[hc]: more work on the required synthesis network.

        * *.[hc]: s/BSE_ITEM_NEVER_STORE/BSE_ITEM_STORAGE_IGNORE/.

svn path=/trunk/; revision=332

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -46,6 +46,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsecategories.h \
 	bsechunk.h \
 	bseconfig.h \
+	bseconstant.h \
 	bsecontainer.h \
 	bsedefs.h \
 	bseeffect.h \
@@ -113,6 +114,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsecapture.c \
 	bsecategories.c \
 	bsechunk.c \
+	bseconstant.c \
 	bsecontainer.c \
 	bseeffect.c \
 	bseeffectbalance.c \
