new module, providing recording abilities, (still has latency issues
Thu Jan 31 17:43:46 2002  Tim Janik  <timj@gtk.org>

        * bsepcminput.[hc]: new module, providing recording abilities,
        (still has latency issues though).

        * bsecapture.[hc]: disabled this (outdated) module, i.e. don't
        enter a category for it.

        * bsepcmoutput.[hc]: code fixes and cleanups.

        * bsepcmdevice-oss.c:
        * bsepcmdevice.[hc]: provide number of values read upon reading
        from a pcm handle.

        * bsepcmmodule.c: provide pcm input module.
        * bseserver.[hc]: use/support pcm input modules.

        * bsesong.[hc]: create left/right mixer.

        * bsesource.c: fix stupid bug that caused deletion of some
        source links to fail.

        * gslopmaster.c: consumer list handling fixes.

svn path=/trunk/; revision=338

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -75,6 +75,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsemidisynthinput.h \
 	bseobject.h \
 	bseoutport.h \
+	bsepcminput.h \
 	bsepcmoutput.h \
 	bseparam.h \
 	bseparasite.h \
@@ -141,6 +142,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsemidisynthinput.c \
 	bseobject.c \
 	bseoutport.c \
+	bsepcminput.c \
 	bsepcmoutput.c \
 	bseparam.c \
 	bseparasite.c \
