--- a/configure.in
+++ b/configure.in
@@ -101,6 +101,17 @@ MC_IF_VAR_EQ(enable_shared, no, , enable_shared=yes)
 dnl
 dnl Define package requirements.
 dnl
+AC_DEFUN(AC_GSL_REQUIREMENTS,
+[
+    AC_CHECK_LIB(vorbisfile, ov_read_float, ov_ok=yes, ov_ok=no, -lvorbisenc -lvorbis -logg)
+    if test $ov_ok = yes ; then
+      GSL_LIBS="-lvorbisfile -lvorbisenc -lvorbis -logg"
+    else
+      AC_MSG_ERROR([Ogg/Vorbis libraries (at least version 1.0rc3) are required])
+    fi
+    sleep 5
+    AC_SUBST(GSL_LIBS)
+])
 AC_DEFUN(AC_BSE_REQUIREMENTS,
 [
     dnl Need pkg-config first
@@ -109,7 +120,7 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     dnl Check for GLib and setup variables
     MC_PKG_CONFIG_REQUIRE(glib-2.0 gobject-2.0 gmodule-2.0 gthread-2.0, 1.3.11, GLIB_CFLAGS, GLIB_LIBS)
     BSE_CFLAGS="$GLIB_CFLAGS"
-    BSE_LIBS="$GLIB_LIBS"
+    BSE_LIBS="$GSL_LIBS $GLIB_LIBS"
     AC_SUBST(BSE_CFLAGS)
     AC_SUBST(BSE_LIBS)
 
@@ -321,6 +332,8 @@ AC_SUBST(STRIP_END)
 # get us pkg-config
 MC_ASSERT_PKG_CONFIG()
 
+# GSL requirements
+AC_GSL_REQUIREMENTS
 # BSE requirements
 AC_BSE_REQUIREMENTS
 # check for sound devices
