--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,8 +1,3 @@
 EXTRA_DIST = $(strip \
-	envelope-test.bse \
-	bsemixer-test.bse \
-	testmixer.bse \
-	davorgan.bse \
-	osc-test.bse \
-	complex-wave.bse \
+	midi-test.bse \
 )
