add argument on whether to save wave files per reference or inlined.
Sat Feb  2 12:22:11 2002  Tim Janik  <timj@gtk.org>

        * bseproject.[hc]:
        (bse_project_store_bse): add argument on whether to save wave
        files per reference or inlined.
        BseProject+store-bse: provide a procedure to actually store
        a project.

        * bsestorage.h: added a flag and macro BSE_STORAGE_SELF_CONTAINED()
        to indicate that objects shouldn't store references.
        * bsestorage.c: convert sample data via gsl_conv_from_float_clip().

        * bsewave.c: fix up the raminings of deciding between inlined storage
        or file references, works with BSE_STORAGE_SELF_CONTAINED() now.

svn path=/trunk/; revision=348

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -67,6 +67,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsemath.h \
 	bsehunkmixer.h \
 	bsemididevice.h \
+	bsemididevice-null.h \
 	bsemididevice-oss.h \
 	bsemidievent.h \
 	bsemidimodule.h \
@@ -134,6 +135,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsemath.c \
 	bsehunkmixer.c \
 	bsemididevice.c \
+	bsemididevice-null.c \
 	bsemididevice-oss.c \
 	bsemidievent.c \
 	bsemidimodule.c \
