support procedures up to BseObject.
Sun Feb  3 23:01:45 2002  Tim Janik  <timj@gtk.org>

        * bseitem.[hc]:
        * bseprocedure.[hc]: support procedures up to BseObject.

        * bseobject.proc: new file to implement BseObject+is_a().

        * *.c:
        * bseobject.[hc]: changed object->name to object->uloc, a non
        user-editable propety which is a unique identifier for the
        objects whithin its container. added a simple string property
        object::name that has no uniquenes or character constrains
        anymore.

        * bsecontainer.[hc]: nuke item_seqid() and get_item() methods,
        we solve this once and for all here and don't need special casing
        in derived objects anymore.
        sequential ids are now handed out per exact type of a child in
        a container.

svn path=/trunk/; revision=351

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -177,6 +177,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 bse_proc_sources = @STRIP_BEGIN@ \
 	bseenums.proc \
 	bsehelloworld.proc \
+	bseobject.proc \
 	bseproject.proc \
 	bseserver.proc \
 	bsesource.proc \
@@ -188,6 +189,7 @@ bse_proc_sources = @STRIP_BEGIN@ \
 bse_proc_gen_sources = @STRIP_BEGIN@ \
 	bseenums.gen-proc.c \
 	bsehelloworld.gen-proc.c \
+	bseobject.gen-proc.c \
 	bseproject.gen-proc.c \
 	bseserver.gen-proc.c \
 	bsesource.gen-proc.c \
