new file selection dialog to load wave files.
Sun Feb  3 23:16:31 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstwavedialog.[hc]: new file selection dialog to
        load wave files.

        * bsw/bswsignal.[hc]: new files to implement bsw_proxy_connect() and
        bsw_proxy_disconnect() to support signals on BswProxy.

        * beast-gtk/bstutils.h:
        * beast-gtk/*.c: remove GTK_OBJECT_DESTROYED() hackiness.

        * beast-gtk/*.c: fix BSE_OBJECT_NAME() usages. many more
        Bse* -> BswProxy fixes.

        * beast-gtk/*.[hc]: many, many fixes.

svn path=/trunk/; revision=352

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -72,9 +72,10 @@ beast_headers = $(strip \
 	bststatusbar.h \
 	bstsupershell.h \
 	bstutils.h \
+	bstwavedialog.h \
+	bstwaveeditor.h \
 	bstwavereposhell.h \
 	bstwaveview.h \
-	bstwaveeditor.h \
 	bstxframe.h \
 	bstxkb.h \
 	bstzoomedwindow.h \
@@ -117,9 +118,10 @@ beast_sources = $(strip \
 	bststatusbar.c \
 	bstsupershell.c \
 	bstutils.c \
+	bstwavedialog.c \
+	bstwaveeditor.c \
 	bstwavereposhell.c \
 	bstwaveview.c \
-	bstwaveeditor.c \
 	bstxframe.c \
 	bstxkb.c \
 	bstzoomedwindow.c \
