new mini sequencer.
Tue Feb  5 04:38:54 2002  Tim Janik  <timj@gtk.org>

        * bsesequencer.[hc]: new mini sequencer.

svn path=/trunk/; revision=353

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -37,6 +37,7 @@ PLUGIN_CFILES = @STRIP_BEGIN@	\
 	bsenoise.[hc]		\
 	bsesimpleadsr.[hc]	\
 	bsesimpleosc.[hc]	\
+	bsesequencer.[hc]	\
 	bsesnooper.[hc]		\
 	bsewaveosc.[hc]		\
 	davxtalstrings.[hc]	\
