--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -5,7 +5,6 @@ icon_list += any.c
 icon_list += atan.c
 icon_list += canyon.c
 icon_list += chorus.c
-icon_list += const.c
 icon_list += drum.c
 icon_list += filter.c
 icon_list += genosc.c
@@ -15,6 +14,7 @@ icon_list += organ.c
 icon_list += osc.c
 icon_list += pipe.c
 icon_list += prod.c
+icon_list += sequencer.c
 icon_list += sine.c
 icon_list += speaker.c
 icon_list += sub.c
@@ -24,7 +24,6 @@ icon_list += adsr.xcf
 icon_list += ampmix.xcf
 icon_list += atan.xcf
 icon_list += canyon.xcf
-icon_list += const.xcf
 icon_list += cyria-filter.xcf
 icon_list += drum.xcf
 icon_list += filter.xcf
@@ -36,6 +35,7 @@ icon_list += organ.xcf
 icon_list += osc.xcf
 icon_list += pipe.xcf
 icon_list += prod.xcf
+icon_list += sequencer.xcf
 icon_list += sine.xcf
 icon_list += speaker.xcf
 icon_list += sub.xcf
