--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -8,11 +8,11 @@ icon_list += mic.c
 icon_list += midi-in.c
 icon_list += midi-out.c
 icon_list += outport.c
-icon_list += sinstrument.c
 icon_list += snet.c
 icon_list += song.c
 icon_list += speaker.c
 icon_list += ball.xcf
+icon_list += const.xcf
 icon_list += inoutport.xcf
 icon_list += inport.xcf
 icon_list += keyboard.xcf
@@ -20,7 +20,6 @@ icon_list += mic.xcf
 icon_list += midi.xcf
 icon_list += outport.xcf
 icon_list += sheet.xcf
-icon_list += sinstrument.xcf
 icon_list += snet.xcf
 icon_list += song.xcf
 icon_list += speaker.xcf
