new simple widget handling BseSequence editing.
Tue Feb  5 04:37:13 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsequence.[hc]: new simple widget handling BseSequence
        editing.

        * beast-gtk/bstsampleshell.[hc]:
        * beast-gtk/bstsamplerepo.[hc]: get rid of this, outdated.

        * beast-gtk/bstparam.[hc]: support BseSequence.

svn path=/trunk/; revision=355

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -63,8 +63,7 @@ beast_headers = $(strip \
 	bstqsampler.h \
 	bstracktable.h \
 	bstradiotools.h \
-	bstsamplerepo.h \
-	bstsampleshell.h \
+	bstsequence.h \
 	bstservermonitor.h \
 	bstsnetshell.h \
 	bstsnetrouter.h \
@@ -108,9 +107,8 @@ beast_sources = $(strip \
 	bstprocedure.c \
 	bstqsampler.c \
 	bstradiotools.c \
+	bstsequence.c \
 	bstracktable.c \
-	bstsamplerepo.c \
-	bstsampleshell.c \
 	bstservermonitor.c \
 	bstsnetshell.c \
 	bstsnetrouter.c \
