quick and simple resonance filter, needs property tweaking still.
Mon Feb 11 18:18:09 2002  Tim Janik  <timj@gtk.org>

        * bsesimpleresonancefilter.[hc]: quick and simple resonance filter,
        needs property tweaking still.

        * bsegenosc.c (bse_gen_osc_class_init): provide logarithmic parameters
        for the frequency scale.

        * bsesimpleosc.c (bse_simple_osc_class_init): same here.

        * bseiirfilter.c (bse_iir_filter_class_init): provide log scale params
        for scales here as well.

svn path=/trunk/; revision=364

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -38,6 +38,7 @@ PLUGIN_CFILES = @STRIP_BEGIN@	\
 	bsenoise.[hc]		\
 	bsesimpleadsr.[hc]	\
 	bsesimpleosc.[hc]	\
+	bsesimpleresonancefilter.[hc]	\
 	bsesequencer.[hc]	\
 	bsesnooper.[hc]		\
 	bsewaveosc.[hc]		\
