--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -79,6 +79,14 @@ bsesimpleosc_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS         += bsesimpleosc.h
 
 ##
+## Plugin bsesimpleresonancefilter
+##
+bsesimpleresonancefilter_la_SOURCES = bsesimpleresonancefilter.c
+bsesimpleresonancefilter_la_LDFLAGS = -module -avoid-version
+bsesimpleresonancefilter_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS         += bsesimpleresonancefilter.h
+
+##
 ## Plugin bsesequencer
 ##
 bsesequencer_la_SOURCES = bsesequencer.c
@@ -128,6 +136,7 @@ plugin_LTLIBRARIES += \
 	bsenoise.la \
 	bsesimpleadsr.la \
 	bsesimpleosc.la \
+	bsesimpleresonancefilter.la \
 	bsesequencer.la \
 	bsesnooper.la \
 	bsewaveosc.la \
