new adjustment which, if connected to another adjustment, translates the
Mon Feb 11 18:48:46 2002  Tim Janik  <timj@gtk.org>

	* bstlogadjustment.[hc]: new adjustment which, if connected
	to another adjustment, translates the value settings into
	a logartihmic scale (which needs to be configured on the log
	adjustment).

	* bstrackeditor-covers.c: produce cover widgets for the rack-editor.

	* bstrackeditor.[hc]: widget, which features BstRackTable, a GtkTable
	derived widget, which allowes free grid-aligned widget replacement via
	DnD by the user if in edit mode.
	the rack editor syncs the GUI layout with a BEAST-Rack-View data pocket
	within bse projects.

	* bstrackitem.[hc] bstrackitem-controllers.c: widget acting as a wrapper
	around items being added to a rack table. this allowes user editing of
	the GUI controller type for bse object properties.

	* bstrtest.c: remove this simple test program.

	* bstapp.[hc]: support the Rack Editor in the Projects/ menu.
	bst_app_find(): support finding the app from a BseProject.

	* bstgconfig.[hc]: add rc-file option which can be used to fire up
	RELEASE-NOTES greeting windows.

	* bstmain.c: fire up a text view for docs//release-notes.txt after
	parsing rc file.

	* bstmenus.[hc]: extend the BstChoice facilities to support submenus.

	* bstparam.[hc]: add support for adding properties to the Rack Editor,
	if this projects Rack Editor is in edit mode, when clicking on the
	xframe widget of the property labels.
	support logarithmic property scales via BstLogAdjustment.

	* bstparamview.[hc]: change GUI for property editing from wrap boxes to
	scrolled windows.

	* bstplayback.[hc]: properly handle stopping and retrigger of the wave
	preview playback.

	* bstracktable.[hc]: emit a notification signal when the edit mode
	was enabled/disabled.
	set gtk_container_set_reallocate_redraws() to avoid drawing artefacts
	when children get added/removed.
	bst_rack_table_size_allocate(): properly update child position bit array.
	bst_

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -49,6 +49,7 @@ beast_headers = $(strip \
 	bstinstrumentview.h \
 	bstitemview.h \
 	bstkeytables.h \
+	bstlogadjustment.h \
 	bstmarshal.h \
 	bstmenus.h \
 	bstparam.h \
@@ -61,6 +62,8 @@ beast_headers = $(strip \
 	bstpreferences.h \
 	bstprocedure.h \
 	bstqsampler.h \
+	bstrackeditor.h \
+	bstrackitem.h \
 	bstracktable.h \
 	bstradiotools.h \
 	bstsequence.h \
@@ -94,6 +97,7 @@ beast_sources = $(strip \
 	bstinstrumentview.c \
 	bstitemview.c \
 	bstkeytables.c \
+	bstlogadjustment.c \
 	bstmain.c \
 	bstmenus.c \
 	bstparam.c \
@@ -107,8 +111,10 @@ beast_sources = $(strip \
 	bstprocedure.c \
 	bstqsampler.c \
 	bstradiotools.c \
-	bstsequence.c \
+	bstrackeditor.c \
+	bstrackitem.c \
 	bstracktable.c \
+	bstsequence.c \
 	bstservermonitor.c \
 	bstsnetshell.c \
 	bstsnetrouter.c \
@@ -130,6 +136,8 @@ beast_sources = $(strip \
 # BEAST sources that get included (don't have own .lo rules)
 beast_extra_sources = $(strip \
 	bstpatterneditorselection.c \
+	bstrackeditor-covers.c \
+	bstrackitem-controllers.c \
 	bstkeytable-base.c \
 	bstkeytable-us.c \
 	bstkeytable-de.c \
@@ -205,11 +213,9 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 # setup BEAST sources and their dependancies
 #
 beast_SOURCES = $(beast_sources)
-noinst_PROGRAMS = bststest bstrtest
+noinst_PROGRAMS = bststest
 bststest_SOURCES = bststest.c bstutils.c gnomeforest.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
-bstrtest_SOURCES = bstrtest.c bstracktable.c bstdial.c
-bstrtest_LDADD = $(progs_LDADD)
 
 EXTRA_DIST += $(beast_headers) $(beast_extra_sources)
 MAINTAINERCLEANFILES += $(beast_built_sources)
