bsw_proxy_get_pspec() get pspecs from proxies.
Mon Feb 11 19:39:13 2002  Tim Janik  <timj@gtk.org>

        * bsw/bswproxy.[hc]: bsw_proxy_get_pspec() get pspecs from proxies.

        * docs/release-notes.tmpl: generate release-notes.txt from this.

svn path=/trunk/; revision=367

--- a/configure.in
+++ b/configure.in
@@ -321,10 +321,12 @@ AC_MSG_CHECKING(whether this is rambokid's machine)
 if fgrep birgrave.birnet.private /etc/hosts >/dev/null 2>&1; then
     BIRNET_Y=
     BIRNET_N=\#
+    AC_DEFINE_UNQUOTED(BST_HAVE_BIRNET, 1)
     AC_MSG_RESULT(yes)
 else
     BIRNET_Y=\#
     BIRNET_N=
+    AC_DEFINE_UNQUOTED(BST_HAVE_BIRNET, 0)
     AC_MSG_RESULT(no)
 fi
 AC_SUBST(MISSING_PERL5)
