--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -4,12 +4,14 @@ public_docs = $(strip \
 	bse-heart.txt \
 	bse-networks.txt \
 	faq.txt \
+	release-notes.txt \
 )
 private_docs = $(strip \
 	bse-categories.txt \
 	bse-data-v1.txt \
 	bse-typesystem.txt \
 	interpolation.txt \
+	release-notes.tmpl \
 )
 build_tools = $(strip \
 	faq.dat \
@@ -27,6 +29,9 @@ docs_DATA = ${public_docs}
 
 faq.txt: @MISSING_PYTHON@ @MISSING_FOLD@ faq.dat makefaq.py text.1.faq text.2.faq
 	python makefaq.py -c text -t text.1.faq -b text.2.faq -o STDOUT | fold -s > $@
+
+release-notes.txt:
+	cat release-notes.tmpl ../NEWS > $@
 
 MAINTAINERCLEANFILES += $(built_sources)
 
