--- a/PKG_config.h.in
+++ b/PKG_config.h.in
@@ -24,6 +24,7 @@
 #undef  BSE_PCM_DEVICE_CONF_ALSA
 #undef  BSE_PCM_DEVICE_CONF_OSS
 #undef  BSE_MIDI_DEVICE_CONF_OSS
+#undef BST_HAVE_BIRNET
 
 /* Define if you have the <dlfcn.h> header file.  */
 #undef HAVE_DLFCN_H
