move controllers from BstRackItem into this place. added more controls.
Wed Feb 13 17:44:59 2002  Tim Janik  <timj@gtk.org>

        * bstcontrollers.[hc]: move controllers from BstRackItem into this
        place. added more controls.

        * bstdial.[hc]: some cleanups/fixes.

        * bstitemview.[hc]: use BSW where apropriate, now that we have
        value iters.

        * bstmenus.[hc]: add ability to change sensitivity of choice items.

        * bstparam.[hc]: clue hunter code updates to deal with object references
        through BSW API.

        * bstplaylist.c: BswVIter updates.

        * bstrackeditor.[hc]: comlpeted most code portions so the rack editor
        slowly aproaches a usable state.

        * bstrackitem.[hc]: dito, code updates, fixes, new features, etc.

        * bstracktable.[hc]: fix drag abortion somewhat.

        * glewidgets.c: new upstream incorporating fixes from GLE.

        * beast-gtk/bstknob.[hc]: new scale/dial widget with different
        usage behaviour.

Tue Feb 12 08:10:11 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c (bst_app_update_can_operate): keep the toplevel
        menu entry "/Waves" sensitive all the time.

svn path=/trunk/; revision=371

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -40,6 +40,7 @@ beast_headers = $(strip \
 	bstapp.h \
 	bstcanvaslink.h \
 	bstcanvassource.h \
+	bstcontrollers.h \
 	bstdefs.h \
 	bstdial.h \
 	bsteffectview.h \
@@ -49,6 +50,7 @@ beast_headers = $(strip \
 	bstinstrumentview.h \
 	bstitemview.h \
 	bstkeytables.h \
+	bstknob.h \
 	bstlogadjustment.h \
 	bstmarshal.h \
 	bstmenus.h \
@@ -89,6 +91,7 @@ beast_sources = $(strip \
 	bstapp.c \
 	bstcanvaslink.c \
 	bstcanvassource.c \
+	bstcontrollers.c \
 	bstdial.c \
 	bsteffectview.c \
 	bstfiledialog.c \
@@ -97,6 +100,7 @@ beast_sources = $(strip \
 	bstinstrumentview.c \
 	bstitemview.c \
 	bstkeytables.c \
+	bstknob.c \
 	bstlogadjustment.c \
 	bstmain.c \
 	bstmenus.c \
@@ -137,7 +141,6 @@ beast_sources = $(strip \
 beast_extra_sources = $(strip \
 	bstpatterneditorselection.c \
 	bstrackeditor-covers.c \
-	bstrackitem-controllers.c \
 	bstkeytable-base.c \
 	bstkeytable-us.c \
 	bstkeytable-de.c \
