--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -2,74 +2,65 @@
 
 DOC_SOURCE_GLOB = $(top_srcdir)/bse/bse*.[hcp]*
 
-HTML_PAGES = bse-procs.html bse.html gsl.html bst.html
-MAN_PAGES_3 = bse-procs.3 bse.3 gsl.3 bst.3
+MAN_PAGES_3 = gsl.3 bse.3 bse-procs.3 bst.3
+DATA_FILES = gsl.dat bse.dat bse-procs.dat bst.dat
+
 BSE_MAN_SRC_GLOBS=$(top_srcdir)/bse/bse*.[hc]
 GSL_MAN_SRC_GLOBS=$(top_srcdir)/bse/gsl*.[hc]
 BST_MAN_SRC_GLOBS=$(top_srcdir)/beast-gtk/bst*.[hc]
 
-EXTRA_DIST += mkdocs.pl $(MAN_PAGES_3) $(HTML_PAGES)
+TAGS2DOC = $(srcdir)/../tags2doc.pl
 
-all-local: $(MAN_PAGES_3) $(HTML_PAGES)
+EXTRA_DIST += scandocs.pl $(MAN_PAGES_3) $(DATA_FILES)
+
+all-local: $(DATA_FILES) $(MAN_PAGES_3)
 
 TEMP_FILES = temp-bsw-gen1.doc temp-bsw-gen2.doc
 
-gsl.3: $(GSL_MAN_SRC_GLOBS) $(srcdir)/mkdocs.pl
-	$(srcdir)/mkdocs.pl --name "GSL-Functions" \
-	                    --blurb "GSL Function Reference" \
-			    --package "GSL (BSE-$(VERSION))" \
-	                    $(GSL_MAN_SRC_GLOBS) >$@
-
-bse.3: $(BSE_MAN_SRC_GLOBS) $(srcdir)/mkdocs.pl
-	$(srcdir)/mkdocs.pl --name "BSE-Functions" \
-	                    --blurb "BSE Function Reference" \
-			    --package "BEAST/BSE-$(VERSION)" \
-	                    $(BSE_MAN_SRC_GLOBS) >$@
-
-bse-procs.3: $(top_builddir)/bse/bsequery $(srcdir)/mkdocs.pl
+#
+# documentation data generation
+#
+gsl.dat: $(GSL_MAN_SRC_GLOBS) $(srcdir)/scandocs.pl
+	$(srcdir)/scandocs.pl --name "GSL-Functions" \
+                            --blurb "GSL Function Reference" \
+                            --package "BEAST-$(VERSION)" \
+                            $(GSL_MAN_SRC_GLOBS) >$@
+bse.dat: $(BSE_MAN_SRC_GLOBS) $(srcdir)/scandocs.pl
+	$(srcdir)/scandocs.pl --name "BSE-Functions" \
+                            --blurb "BSE Function Reference" \
+                            --package "BEAST-$(VERSION)" \
+                            $(BSE_MAN_SRC_GLOBS) >$@
+bse-procs.dat: $(top_builddir)/bse/bsequery $(srcdir)/scandocs.pl
 	$(top_builddir)/bse/bsequery -p procdoc >temp-bsw-gen1.doc \
-	&& $(srcdir)/mkdocs.pl --name "BSE-Procedures" \
-	                       --blurb "BSE Procedure Reference" \
-			       --package "BEAST/BSE-$(VERSION)" \
-	                       temp-bsw-gen1.doc >$@ \
-	&& rm -f temp-bsw-gen1.doc
-
-bst.3: $(BST_MAN_SRC_GLOBS) $(srcdir)/mkdocs.pl
-	$(srcdir)/mkdocs.pl --name "BST-Functions" \
-	                    --blurb "BST Function Reference" \
-			    --package "BEAST/BSE-$(VERSION)" \
-	                    $(BST_MAN_SRC_GLOBS) >$@
-
-gsl.html: $(GSL_MAN_SRC_GLOBS) $(srcdir)/mkdocs.pl
-	$(srcdir)/mkdocs.pl --name "GSL-Functions" \
-	                    --blurb "GSL Function Reference" \
-			    --package "GSL (BSE-$(VERSION))" \
-			    --html \
-	                    $(GSL_MAN_SRC_GLOBS) >$@
-
-bse.html: $(BSE_MAN_SRC_GLOBS) $(srcdir)/mkdocs.pl
-	$(srcdir)/mkdocs.pl --name "BSE-Functions" \
-	                    --blurb "BSE Function Reference" \
-			    --package "BEAST/BSE-$(VERSION)" \
-			    --html \
-	                    $(BSE_MAN_SRC_GLOBS) >$@
-
-bse-procs.html: $(top_builddir)/bse/bsequery $(srcdir)/mkdocs.pl
-	$(top_builddir)/bse/bsequery -p procdoc >temp-bsw-gen2.doc \
-	&& $(srcdir)/mkdocs.pl --name "BSE-Procedures" \
-	                       --blurb "BSE Procedure Reference" \
-			       --package "BEAST/BSE-$(VERSION)" \
-			       --html \
-	                       temp-bsw-gen2.doc >$@ \
-	&& rm -f temp-bsw-gen2.doc
-
-bst.html: $(BST_MAN_SRC_GLOBS) $(srcdir)/mkdocs.pl
-	$(srcdir)/mkdocs.pl --name "BST-Functions" \
-	                    --blurb "BST Function Reference" \
-			    --package "BEAST/BSE-$(VERSION)" \
-			    --html \
-	                    $(BST_MAN_SRC_GLOBS) >$@
+        && $(srcdir)/scandocs.pl --name "BSE-Procedures" \
+                               --blurb "BSE Procedure Reference" \
+                               --package "BEAST-$(VERSION)" \
+                               temp-bsw-gen1.doc >$@ \
+        && rm -f temp-bsw-gen1.doc
+bst.dat: $(BST_MAN_SRC_GLOBS) $(srcdir)/scandocs.pl
+	$(srcdir)/scandocs.pl --name "BST-Functions" \
+                            --blurb "BST Function Reference" \
+                            --package "BEAST-$(VERSION)" \
+                            $(BST_MAN_SRC_GLOBS) >$@
 
 
+#
+# man page generation
+#
+MAN_DEPS = $(TAGS2DOC) $(srcdir)/man-conf.pl
+DOC2MAN = $(TAGS2DOC) --config $(srcdir)/man-conf.pl
+gsl.3:		gsl.dat $(MAN_DEPS)
+	$(DOC2MAN) < gsl.dat > $@
+bse.3:		bse.dat $(MAN_DEPS)
+	$(DOC2MAN) < bse.dat > $@
+bse-procs.3:	bse-procs.dat $(MAN_DEPS)
+	$(DOC2MAN) < bse-procs.dat > $@
+bst.3:		bst.dat $(MAN_DEPS)
+	$(DOC2MAN) < bst.dat > $@
+
+
+#
+# clean up
+#
 clean-local:
-	rm -f $(TEMP_FILES) $(MAN_PAGES_3)
+	rm -f $(TEMP_FILES) $(MAN_PAGES_3) $(DATA_FILES)
