--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,12 +1,10 @@
-SUBDIRS = reference
+SUBDIRS = generated reference
 
 public_docs = $(strip \
-	bse-heart.txt \
-	bse-networks.txt \
-	faq.txt \
-	release-notes.txt \
 )
 private_docs = $(strip \
+	bse-heart.txt \
+	bse-networks.txt \
 	bse-categories.txt \
 	bse-data-v1.txt \
 	bse-typesystem.txt \
@@ -14,25 +12,10 @@ private_docs = $(strip \
 	release-notes.tmpl \
 )
 build_tools = $(strip \
-	faq.dat \
-	text.1.faq \
-	text.2.faq \
-	makefaq.py \
-)
-built_sources = $(strip \
-	faq.txt \
+	tags2doc.pl \
 )
 
 docsdir = ${beastdocsdir}
 docs_DATA = ${public_docs}
-
-
-faq.txt: @MISSING_PYTHON@ @MISSING_FOLD@ faq.dat makefaq.py text.1.faq text.2.faq
-	python makefaq.py -c text -t text.1.faq -b text.2.faq -o STDOUT | fold -s > $@
-
-release-notes.txt:
-	cat release-notes.tmpl ../NEWS > $@
-
-MAINTAINERCLEANFILES += $(built_sources)
 
 EXTRA_DIST = ${public_docs} ${private_docs} $(build_tools)
